@@ -12,16 +12,18 @@ import sys
 MC_VERSION_BASE = "1.16.1"
 VERSION_TYPE = "dev"
 # possible: [<pre>]<version>, <normal mc snapshot format>, snapshot dev <number of snapshot> cycle <cycle number>
-VERSION_NAME = "a1.1.0"
+VERSION_NAME = "snapshot dev 6"
 
-DEVELOPING_FOR = "a1.1.0"
-DEVELOPMENT_COUNTER = 2
+DEVELOPING_FOR = "20w29a"
+DEVELOPMENT_COUNTER = 1
 
 # list of all versions since 19w52a to indicate order of release; used in save files todo: export to other file
-VERSION_ORDER = ["19w52a", "20w05a", "20w07a", "20w09a", "20w10a", "20w11a", "20w12a", "20w12b", "20w14a",
-                 "a1.0.0", "a1.0.1", "snapshot dev 1 cycle 1", "snapshot dev 1 cycle 2",
-                 "snapshot dev 1 cycle 3", "snapshot dev 1 cycle 4", "20w22a", "snapshot dev 1",
-                 "snapshot dev 2", "20w24a", "snapshot dev 3", "20w25a", "snapshot dev 4", "20w28a", "snapshot dev 5"]
+VERSION_ORDER = ["19w52a", "20w05a", "20w07a", "20w09a", "20w10a", "20w11a", "20w12a", "20w12b", "20w14a", "a1.0.0", "a1.0.1",
+                 "snapshot dev 1 cycle 1", "snapshot dev 1 cycle 2", "snapshot dev 1 cycle 3", "snapshot dev 1 cycle 4", "20w22a",
+                 "snapshot dev 1", "snapshot dev 2", "20w24a",
+                 "snapshot dev 3", "20w25a",
+                 "snapshot dev 4", "20w28a",
+                 "snapshot dev 5", "a1.1.0"]
 
 FULL_VERSION_NAME = "mcpython version {} ({}) based on mc version {}".format(
     VERSION_NAME, VERSION_TYPE, MC_VERSION_BASE)
