@@ -1233,3 +1233,4 @@ sstarted these clone on 12th of July, 2019
 [uuk]: released a1.1.0
 
 [uuk]: mdk has now an script for changing the target version
+[uuk]: data generators can now also add new data generators
